// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/STRING.proto";


package soo.protobuf;

message SooDependency {
extensions 4 to 104;

  optional ccsds_mal.protobuf.STRING data = 1;
  optional ccsds_mal.protobuf.BLOB sooOperationRelated = 2;
  optional ccsds_mal.protobuf.BLOB sooOperationSource = 3;
}
